--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,8 @@
     "postcss": "^8.4.35",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1"
   },
