--- a/app/.env.example
+++ b/app/.env.example
@@ -50,4 +50,10 @@ DEFAULT_STATS_TIME_WINDOW=14
 # Monitoring
 POSTHOG_API_KEY=your_posthog_api_key
 POSTHOG_HOST=https://us.posthog.com
+
+# Trigger Configuration
+TRIGGER_PROJECT_REF=your_trggier_project_ref
+TRIGGER_SECRET_KEY=your_secret_key_here
+
+# OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
