--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "@slack/bolt": "^4.4.0",
     "@slack/web-api": "^7.10.0",
     "@thallesp/nestjs-better-auth": "^1.0.3",
+    "@trigger.dev/sdk": "^4.0.2",
     "@types/jsonwebtoken": "^9.0.10",
     "arctic": "^3.7.0",
     "better-auth": "^1.3.7",
@@ -46,7 +47,8 @@
     "posthog-node": "^5.8.1",
     "prisma": "^6.15.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "trigger.dev": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
