--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -55,7 +55,7 @@ EXPOSE 3000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD node dist/health-check.js || exit 1
+  CMD node dist/src/main.js --health-check || exit 1
 
 # Start the application with migrations
-CMD ["/app/start.sh", "dumb-init", "node", "dist/main.js"]
+CMD ["/app/start.sh", "dumb-init", "node", "dist/src/main.js"]
