--- a/app/.env.example
+++ b/app/.env.example
@@ -5,7 +5,7 @@ DEBUG=true
 LOG_LEVEL=info
 
 # API settings
-API_HOST=localhost
+API_HOST=0.0.0.0
 API_PORT=3003
 CALLBACK_API_HOST=http://localhost:3003
 FRONTEND_URL=http://localhost:3001
