--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -38,6 +38,8 @@ COPY --from=builder --chown=nestjs:nodejs /app/dist ./dist
 COPY --from=builder --chown=nestjs:nodejs /app/node_modules ./node_modules
 COPY --from=builder --chown=nestjs:nodejs /app/package*.json ./
 COPY --from=builder --chown=nestjs:nodejs /app/prisma ./prisma
+COPY --from=builder --chown=nestjs:nodejs /app/trigger.config.ts ./trigger.config.ts
+COPY --from=builder --chown=nestjs:nodejs /app/trigger ./trigger
 
 # Install production dependencies and keep Prisma for migrations
 RUN npm ci --only=production && npm install prisma --save-dev && npm cache clean --force
