--- a/app/tsconfig.build.json
+++ b/app/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  },
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
