Update ts config for trigger

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -33,5 +33,10 @@
       "@/webhooks/*": ["src/webhooks/*"],
       "@/notifications/*": ["src/notifications/*"]
     }
-  }
+  },
+  "include": [
+    "src/**/*",
+    "trigger/**/*",
+    "trigger.config.ts"
+  ]
 }
