--- a/app/package.json
+++ b/app/package.json
@@ -34,7 +34,7 @@
     "@slack/bolt": "^4.4.0",
     "@slack/web-api": "^7.10.0",
     "@thallesp/nestjs-better-auth": "^1.0.3",
-    "@trigger.dev/sdk": "^4.0.2",
+    "@trigger.dev/sdk": "4.0.4",
     "@types/jsonwebtoken": "^9.0.10",
     "arctic": "^3.7.0",
     "better-auth": "^1.3.7",
