--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "postcss": "^8.4.35",
+    "posthog-js": "^1.275.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
