--- a/client/.env.example
+++ b/client/.env.example
@@ -1,1 +1,4 @@
-API_URL=http://localhost:8000
+API_URL=http://localhost:3003
+NEXT_PUBLIC_API_URL=http://localhost:3003
+NEXT_PUBLIC_POSTHOG_KEY=
+NEXT_PUBLIC_POSTHOG_SURVEY_ID=
