Add Stripe billing and entitlements integration
Introduces Stripe subscription management, billing endpoints, and feature entitlements to the application. Adds new Prisma models and migrations for subscriptions and entitlements, updates environment and configuration files, and implements backend modules, services, controllers, and guards for Stripe and entitlement logic. Notification profile creation and updates now enforce plan-based limits and feature access. Client and documentation are updated to support and describe the new billing features.

--- a/app/.env.example
+++ b/app/.env.example
@@ -41,3 +41,12 @@ TRIGGER_SECRET_KEY=your_secret_key_here
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+STRIPE_BASIC_MONTHLY_PRICE_ID=price_basic_monthly
+STRIPE_BASIC_ANNUAL_PRICE_ID=price_basic_annual
+STRIPE_PRO_MONTHLY_PRICE_ID=price_pro_monthly
+STRIPE_PRO_ANNUAL_PRICE_ID=price_pro_annual
