--- a/client/.env.example
+++ b/client/.env.example
@@ -1,4 +1,14 @@
+# Application settings
 API_URL=http://localhost:3003
 NEXT_PUBLIC_API_URL=http://localhost:3003
+
+# PostHog Configuration
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_SURVEY_ID=
+
+# Stripe Configuration
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+NEXT_PUBLIC_STRIPE_BASIC_MONTHLY_PRICE_ID=price_basic_monthly
+NEXT_PUBLIC_STRIPE_BASIC_ANNUAL_PRICE_ID=price_basic_annual
+NEXT_PUBLIC_STRIPE_PRO_MONTHLY_PRICE_ID=price_pro_monthly
+NEXT_PUBLIC_STRIPE_PRO_ANNUAL_PRICE_ID=price_pro_annual
