Add open source mode to enable full features without billing
Introduces 'open source mode' by adding PAYMENT_ENABLED and NEXT_PUBLIC_PAYMENT_ENABLED environment variables to backend and frontend. When disabled, all users receive unlimited pro-level entitlements and billing UI is hidden. Updated documentation, environment examples, backend entitlements logic, and frontend settings layout to support this mode.

--- a/app/.env.example
+++ b/app/.env.example
@@ -43,6 +43,8 @@ TRIGGER_SECRET_KEY=your_secret_key_here
 OPENAI_API_KEY=your_openai_api_key
 
 # Stripe Configuration
+# Set PAYMENT_ENABLED to false to run in open-source mode with full feature access (no billing)
+PAYMENT_ENABLED=true
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
