--- a/client/.env.example
+++ b/client/.env.example
@@ -6,6 +6,8 @@ NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_SURVEY_ID=
 
 # Stripe Configuration
+# Set NEXT_PUBLIC_PAYMENT_ENABLED to false to run in open-source mode (hides billing UI)
+NEXT_PUBLIC_PAYMENT_ENABLED=true
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 NEXT_PUBLIC_STRIPE_BASIC_MONTHLY_PRICE_ID=price_basic_monthly
 NEXT_PUBLIC_STRIPE_BASIC_ANNUAL_PRICE_ID=price_basic_annual
