Add email module with password reset template
Introduces a new email module including service and password reset email template using React Email and Resend. Updates environment example and documentation for email setup. Adds related dependencies to package.json and adjusts tsconfig for React types.

--- a/app/.env.example
+++ b/app/.env.example
@@ -42,6 +42,10 @@ TRIGGER_SECRET_KEY=your_secret_key_here
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
 
+# Resend Configuration (Email Service)
+RESEND_API_KEY=re_your_resend_api_key
+RESEND_FROM_EMAIL=noreply@yourdomain.com
+
 # Stripe Configuration
 # Set PAYMENT_ENABLED to false to run in open-source mode with full feature access (no billing)
 PAYMENT_ENABLED=true
