--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "@nestjs/throttler": "^6.4.0",
     "@octokit/rest": "^22.0.0",
     "@prisma/client": "^6.15.0",
+    "@react-email/components": "^0.5.6",
     "@slack/web-api": "^7.10.0",
     "@thallesp/nestjs-better-auth": "^1.0.3",
     "@trigger.dev/sdk": "4.0.4",
@@ -45,7 +46,9 @@
     "passport-jwt": "^4.0.1",
     "posthog-node": "^5.8.2",
     "prisma": "^6.15.0",
+    "react-email": "^4.3.0",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.1.3",
     "rxjs": "^7.8.1",
     "stripe": "^18.5.0",
     "trigger.dev": "^4.0.2"
@@ -60,6 +63,8 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
