--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -21,6 +21,7 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "noFallthroughCasesInSwitch": true,
+    "jsx": "react",
     "paths": {
       "@/*": ["src/*"],
       "@/auth/*": ["src/auth/*"],
