add google oauth support

--- a/app/.env.example
+++ b/app/.env.example
@@ -7,7 +7,8 @@ LOG_LEVEL=info
 # API settings
 API_HOST=0.0.0.0
 API_PORT=3003
-CALLBACK_API_HOST=http://localhost:3003
+API_URL=http://localhost:3003
+CALLBACK_API_HOST=http://localhost:3003 # Useful if the callback needs to be HTTPS so you can use a tunnel
 FRONTEND_URL=http://localhost:3001
 
 # Database
@@ -31,6 +32,10 @@ GITHUB_CLIENT_SECRET=your_github_client_secret
 GITHUB_PRIVATE_KEY=your_github_private_key
 GITHUB_PRIVATE_KEY_PATH=./github_private_key.pem
 GITHUB_WEBHOOK_SECRET=your_webhook_secret
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
 
 # Monitoring
 POSTHOG_API_KEY=your_posthog_api_key
