--- a/app/.env.example
+++ b/app/.env.example
@@ -17,6 +17,7 @@ DATABASE_URL=postgresql://radar_user:radar_password@localhost:5432/radar_dev
 # Security
 SECRET_KEY=your-super-secret-key-here
 BETTER_AUTH_SECRET=your-super-secret-auth-key-here
+BETTER_AUTH_URL=http://localhost:3001
 
 # Slack Configuration
 SLACK_APP_CLIENT_ID=your_slack_client_id
