Switch to PAYMENT_DISABLED env var for open-source mode
Replaces the PAYMENT_ENABLED environment variable with PAYMENT_DISABLED across documentation, example env files, and frontend logic. Updates all references and instructions to use PAYMENT_DISABLED for enabling open-source mode, clarifying configuration for both backend and frontend. Adjusts UpgradeBanner logic to check PAYMENT_DISABLED instead of PAYMENT_ENABLED.

--- a/app/.env.example
+++ b/app/.env.example
@@ -54,8 +54,8 @@ RESEND_API_KEY=re_your_resend_api_key
 RESEND_FROM_EMAIL=noreply@yourdomain.com
 
 # Stripe Configuration
-# Set PAYMENT_ENABLED to false to run in open-source mode with full feature access (no billing)
-PAYMENT_ENABLED=true
+# Set PAYMENT_DISABLED to true to run in open-source mode with full feature access (no billing)
+# PAYMENT_DISABLED=true
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
